# blendering

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-20-blender-agent-accuracy.md
docs/superpowers/specs/: 2026-05-20-blender-agent-accuracy-design.md
scripts/: smoke_mcp.py
src/blendering/: __init__.py  cli.py  config.py  cost.py  framing.py  headless.py  llm.py  mcp_client.py  orchestrator.py  prompts.py  schemas.py  verifier.py
src/blendering/tui/: app.py  events.py
src/blendering/utils/: images.py  logging.py
tests/: test_config.py  test_critic.py  test_framing.py  test_orchestrator.py  test_planner.py  test_schemas.py  test_snapshot_parse.py  test_verifier.py
