[project]
name = "blendering"
version = "0.1.0"
description = "Two-model (Actor + Critic) agent for driving Blender via MCP"
readme = "README.md"
authors = [
    { name = "milesangelo", email = "milesvendetti@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50.0",
    "mcp>=1.2.0",
    "textual>=0.85.0",
    "textual-image>=0.6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.2",
    "typer>=0.12.5",
    "rich>=13.9.0",
    "pillow>=10.4.0",
    "anyio>=4.6.0",
]

[project.scripts]
blendering = "blendering.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12.20240917",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
